# membrane

./: .assetsignore  .coderabbit.yaml  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  docusaurus.config.js  go.mod  go.sum  package-lock.json  package.json  rfc.md  sidebars.js  wrangler.jsonc
.github/workflows/: ci.yml  docs-deploy.yml  docs.yml  eval.yml  npm-publish.yml  release.yml
api/grpc/: conversions_test.go  handlers.go  handlers_delegate_test.go  handlers_validation_test.go  server.go  server_interceptor_test.go
clients/openclaw/: README.md  openclaw.plugin.json  package.json  tsconfig.json  vitest.config.ts
clients/python/: README.md  pyproject.toml
clients/python/membrane/: __init__.py  client.py  types.py
clients/python/membrane/v1/: membrane_pb2.py  membrane_pb2_grpc.py
clients/python/tests/: test_client.py  test_integration.py  test_types.py
clients/typescript/: README.md  package-lock.json  package.json
cmd/membrane-eval/: main.go  (+1 more)
cmd/membrane-eval-lifecycle/: main.go  main_test.go
docs/: architecture.mdx  docs.json  index.md  index.mdx  introduction.mdx  package-lock.json  package.json  quickstart.mdx
tests/: api_helpers_test.go  atomicity_test.go  config_validation_test.go  eval_competence_test.go  eval_consolidation_test.go  eval_decay_test.go  eval_grpc_test.go  eval_invariants_test.go  eval_metrics_test.go  eval_revision_test.go  eval_trust_test.go  eval_typed_test.go  integration_test.go  recall_test.go  retrieval_order_test.go  revision_test.go  selection_test.go
(+158 files in other folders)
