[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "membrane-client"
version = "0.2.0"
description = "Python client for the Membrane memory substrate"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["grpcio>=1.80.0", "protobuf>=6.31.1"]

[project.optional-dependencies]
dev = ["pytest", "grpcio-tools>=1.80.0"]

[tool.setuptools.packages.find]
include = ["membrane*"]
